# secondlab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
classes/cpp/: ArraySequence.cpp  BItSequence.cpp  ListSequence.cpp  Sequence.cpp  UI.cpp  UIDeque.cpp  tests.cpp
classes/headers/: ArraySequence.h  BItSequence.cpp  BItSequence.h  DoublyLinkedList.h  DynamicArray.h  IEnumerator.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  LinkedListEnumerator.h  ListSequence.h  MutableArraySequence.h  MutableListSequence.h  Option.h  Segment.h  SegmentedDeque.h  Sequence.h  Student.h  Teacher.h  UI.cpp  UI.h  UIDeque.h
classes/headers/дописать/: BItSequence.h  tests.h
classes/secondlab/headers/: ArraySequence.h  BItSequence.h
tests/: testsDynamicArray.cpp  testsLinkedList.cpp  testsSegmentedDeque.cpp  testsSequence.cpp
tests/tests secondlab/: testsDynamicArray.cpp  testsLinkedList.cpp  testsSequence.cpp
